# tars

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  flake.nix  install.sh  tars.py  update-tars.tars
.github/workflows/: build_nix.yml
src/: args.rs  build.rs  config.rs  main.rs  markdown.rs  serve.rs  template.rs
