[package]
name = "tars-bin"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/OldUser101/tars"
description = "A small, fast, static site generator."
readme = "README.md"

[[bin]]
name = "tars"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = [ "serde" ] }
clap = "4.5.51"
copy_dir = "0.1.3"
minijinja = { version = "2.12.0", features = [ "loader" ] }
pulldown-cmark = "0.13.0"
serde = { version = "1.0.228", features = [ "derive" ] }
serde_yaml = "0.9.34"
tokio = { version = "1.48.0", features = [ "macros", "rt", "rt-multi-thread" ] }
toml = "0.9.8"
walkdir = "2.5.0"
warp = { version = "0.4.2", features = [ "server" ] }
